# streamly-shell

./: .packcheck.ignore  CHANGELOG.md  NOTICE  README.md  appveyor.yml  cabal.project.Werror  default.nix  stack.yaml  streamly-shell.cabal
.github/workflows/: haskell.yml
design/: proposal.md
docs/: streamly-vs-shell.md
src/Streamly/System/: Sh.hs
