cabal-version:       2.2
name:                streamly-shell
version:             0.1.0
synopsis:            Shell commands as streams
description:
  A wrapper over Streamly.System.Command module to use `sh` as an
  interpreter for command strings.
homepage:            https://streamly.composewell.com
bug-reports:         https://github.com/composewell/streamly-process/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           Composewell Technologies
category:            Streaming, System, Shell
stability:           Experimental
tested-with:         GHC==9.4.2
                   , GHC==9.2.2
                   , GHC==9.0.1
                   , GHC==8.10.7
                   , GHC==8.8.4
                   , GHC==8.6.5
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  NOTICE
  README.md
  design/proposal.md
source-repository head
  type: git
  location: https://github.com/composewell/streamly-shell

common compile-options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wunrecognised-warning-flags
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wnoncanonical-monad-instances

common optimization-options
  ghc-options:
    -O2
    -fdicts-strict
    -fspec-constr-recursive=16
    -fmax-worker-args=16

library
  import: compile-options, optimization-options
  hs-source-dirs: src
  exposed-modules:
      Streamly.System.Sh
  ghc-options:
    -Wall
    -Wcompat
    -Wunrecognised-warning-flags
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
  build-depends:
        base >= 4.8 && < 5
      , exceptions >= 0.8 && < 0.11
      , streamly-core >= 0.1.0 && < 0.2.1
      , monad-control >= 1.0 && < 1.2
      , streamly-process >= 0.2.0
